# fabric

./: Cargo.toml
.github/workflows/: pre-commit.yml
client/: Cargo.toml  README.md
client/src/: client.rs  lib.rs
fabric-client/: Cargo.toml
fabric-client/src/: error.rs  lib.rs
fabric-server/: Cargo.toml  README.md
server/: Cargo.toml
server/src/: command.rs  error.rs  fabric.rs  main.rs
src/: fabric.rs  main.rs
tests/: Cargo.toml
tests/src/: lib.rs
tests/tests/: integration_tests.rs
