[package]
name = "fabric-cache-client"
version = "0.1.3"
edition = "2021"
authors = ["Antonio Hickey <contact@antoniohickey.com>"]
description = "Client for interacting with a fabric server."
documentation = "https://docs.rs/fabric-client/latest/fabric-client/index.html"
homepage = "https://crates.io/crates/fabric-client"
repository = "https://github.com/antonio-hickey/fabric"
readme = "README.md"
keywords = ["fabric", "data", "cache", "keyval"]
license = "MIT"
exclude = ["/.github/"]
include = ["README.md", "src/**/*", "examples/**/*"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
