[package]
name = "fabric-cache"
version = "0.1.0"
edition = "2021"
authors = ["Antonio Hickey <contact@antoniohickey.com>"]
description = "In-Memory datastructure cache."
documentation = "https://docs.rs/fabric/latest/fabric/index.html"
homepage = "https://crates.io/crates/fabric"
repository = "https://github.com/antonio-hickey/fabric"
readme = "README.md"
keywords = ["fabric", "data", "cache", "keyval"]
license = "MIT"
exclude = ["/.github/"]
include = ["README.md", "src/**/*", "examples/**/*"]

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.133"
